Enhance result display and add popup for trip cost calculation in Travel Cost Calculator

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </section>
   </main>
 
+  <div id="result-popup" class="popup hidden">
+    <div class="popup-content">
+      <button class="close-btn" onclick="closePopup()">&times;</button>
+      <div id="result-content"></div>
+    </div>
+  </div>
+
   <footer class="footer">
     <p>&copy; 2025 Travel Cost Calculator</p>
   </footer>
