--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
       navigator.serviceWorker.register('service-worker.js');
     }
   </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js').then(registration => {
+        registration.addEventListener('updatefound', () => {
+          const newWorker = registration.installing;
+          newWorker.addEventListener('statechange', () => {
+            if (newWorker.state === 'installed' && navigator.serviceWorker.controller) {
+              // Force the app to update
+              newWorker.postMessage({ action: 'skipWaiting' });
+              window.location.reload();
+            }
+          });
+        });
+      });
+    }
+  </script>
 </body>
 
 </html>
